force-app/main/default/objects/custom_create278__c/custom_create278__c.object-meta.xml
<CustomObject>
    <label>Custom created object278</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects278</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>