force-app/main/default/objects/custom_create278__c/fields/custom_create_278field569__c.field-meta.xml
<CustomField>
    <fullName>custom_create_278field569__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 278field569</label>
    <type>Checkbox</type>
</CustomField>